vlib/v/checker/tests/array_of_sumtype_append_err.out
vlib/v/checker/tests/array_of_sumtype_append_err.vv:13:9: error: cannot append `[]string` to `[]Bar`
   11 | fn main() {
   12 |     mut bar := []Bar{}
   13 |     bar << ['hey']
      |            ~~~~~~~
   14 |     bar << 'hey'
   15 |     bar << produce_bar_a_array()
vlib/v/checker/tests/array_of_sumtype_append_err.vv:14:9: error: cannot append `string` to `[]Bar`
   12 |     mut bar := []Bar{}
   13 |     bar << ['hey']
   14 |     bar << 'hey'
      |            ~~~~~
   15 |     bar << produce_bar_a_array()
   16 | }
