vlib/v/checker/tests/array_of_sumtype_append_err.vv
type Bar = BarA | BarB

struct BarA {}

struct BarB {}

fn produce_bar_a_array() []BarA {
	return [BarA{}]
}

fn main() {
	mut bar := []Bar{}
	bar << ['hey']
	bar << 'hey'
	bar << produce_bar_a_array()
}
